kube/kustomize/overlays/test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i046364-eks-hello
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bootstrap-kickstart-6x.optz.awmae.uat.aws.jpmchase.net
      http:
        paths:
          - path: /api/harness
            pathType: Prefix
            backend:
              service:
                name: i046364-eks-hello
                port:
                  number: 80
  tls:
    - hosts:
        - bootstrap-kickstart-6x.optz.awmae.uat.aws.jpmchase.net
